# TensorBeam

./: .gitignore  Dockerfile.client  Dockerfile.server  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
adapters/: __init__.py
adapters/adapter_cloud_robotics_core/: __init__.py  adapter.py
adapters/adapter_fogros2/: __init__.py  adapter.py
adapters/adapter_freefleet/: __init__.py  adapter.py
adapters/adapter_hawkbit/: __init__.py  adapter.py
adapters/adapter_openrmf/: __init__.py  adapter.py
adapters/adapter_opentcs/: __init__.py  adapter.py
adapters/adapter_ros2_generic/: __init__.py  adapter.py
adapters/adapter_webhook_generic/: __init__.py  adapter.py
adapters/adapter_webrtc_ros/: __init__.py  adapter.py
bench/: Makefile.bench  run_bench.py
bench/harness/: runner.py
bench/reports/: report.json  (+1 more)
compliance/: gdpr_art32_mapping.md  hipaa_mapping.md  soc2_mapping.md
docs/: architecture.md  key_management.md  ops_runbook.md  optimization_guide.md  performance.md  threat_model.md
examples/: fast_lane_demo.py  fhe_demo.py  incident_triage_demo.py  sop_rerank_demo.py
fhe_inference_service/: __init__.py
moai_client_sdk/: __init__.py  client.py
moai_core/: __init__.py  backend.py  polynomial_ops.py  simd_batching.py
moai_service/: __init__.py  grpc_server.py  job_queue.py  observability.py  worker.py
robops_edge_agent/: __init__.py  adapter_base.py  agent.py  events.py
security/: access_control.md  key_management.md  threat_model.md
tests/: __init__.py  test_backend.py  test_integration.py  test_serialization.py
(+50 files in other folders)
